--- a/core/ui-kit/src/modules/navigation/navigation-footer.setup.scss
+++ b/core/ui-kit/src/modules/navigation/navigation-footer.setup.scss
@@ -9,4 +9,3 @@ $navigation-footer-item-border-color: $color-palette-grey-8 !default;
 
 $navigation-footer-item-icon-font-size: $spacing-18 !default;
 $navigation-footer-item-icon-line-height: rem(28px) !default;
-$navigation-footer-link-inner-spacing-horizontal: $spacing-30 !default;
